# quick-claude

./: README.md  pyproject.toml
quick_claude/: __init__.py  cli.py
quick_claude/templates/: CLAUDE.md  gitignore  pyproject.toml
quick_claude/templates/dot-claude/hooks/: deny-check.py
quick_claude/templates/dot-github/workflows/: ci.yml
